--- a/files/README_rdoc.html
+++ b/files/README_rdoc.html
@@ -56,7 +56,7 @@
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Tue Sep 15 13:29:54 +0200 2009</td>
+      <td>Thu Oct 22 16:32:05 +0200 2009</td>
     </tr>
     </table>
   </div>
@@ -76,49 +76,21 @@ system. Talia can be used with Ruby on Rails, or as a standalone package.
 </p>
 <p>
 More documentation can be found on the Talia website: <a
-href="http:///trac.talia.discovery-project.eu">trac.talia.discovery-project.eu</a>/
-</p>
-<h1>Installation</h1>
-<p>
-If you have the Talia files on your sytem, you&#8216;re almost there. For
-now, please consult the web page for installation instructions.
-</p>
-<h1>Configuration</h1>
-<p>
-When you&#8216;re in Rails, you can start Talia in the environment.rb,
-using the <a
-href="../classes/TaliaCore/Initializer.html">TaliaCore::Initializer</a> -
-if you&#8216;re building a standalone application, it&#8216;s almost the
-same (although you&#8216;ll have to use standalone_db=yes to configure
-ActiveRecord manually)
+href="http://net7sviluppo.com/trac/talia">net7sviluppo.com/trac/talia</a>/
 </p>
 <p>
-There are some sample configuration files in the distribution:
+The RDoc documentation may be created directly from the sources, or you can
+find it at <a
+href="http://net7.github.com/talia_core">net7.github.com/talia_core</a>/
 </p>
-<ul>
-<li>talia_core.yml - This file contains the main configuration.
-
-</li>
-<li>database.yml - Standalon Db configuration. Same format as for Rails.
-
-</li>
-<li>rdfstore.yml - RDF storage configuration.
-
-</li>
-</ul>
+<h1>Installation and Configuration</h1>
 <p>
-The default configuration (talia_core.yml) will use the database.yml and
-rdfstore.yml to configure the data storage. See the example filme for an
-explanation of the options. The database configuration will only be used if
-you are running Talia standalone; otherwise you must use RAILS&#8217;
-existing database connection.
+If you want to get started with Talia, check out the installation guide at
 </p>
 <p>
-The options for the RDF store vary depending on the store that you have
-selected, but some examples are provideed.
+<a
+href="http://net7sviluppo.com/trac/talia/wiki/InstallTaliaForDiscoveryPartners">net7sviluppo.com/trac/talia/wiki/InstallTaliaForDiscoveryPartners</a>
 </p>
-<h1>DB Migrations</h1>
-<h1>Importing data</h1>
 
     </div>
 
