Committed new documentation set through Gokdok

--- a/files/README_rdoc.html
+++ b/files/README_rdoc.html
@@ -56,7 +56,7 @@
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Thu Oct 22 16:32:05 +0200 2009</td>
+      <td>Thu Oct 22 16:36:27 +0200 2009</td>
     </tr>
     </table>
   </div>
@@ -86,6 +86,13 @@ href="http://net7.github.com/talia_core">net7.github.com/talia_core</a>/
 <h1>Installation and Configuration</h1>
 <p>
 If you want to get started with Talia, check out the installation guide at
+</p>
+<p>
+<a
+href="http://net7sviluppo.com/trac/talia/wiki/TaliaInstallation">net7sviluppo.com/trac/talia/wiki/TaliaInstallation</a>
+</p>
+<p>
+The guide for the Discovery Project partners is also still available at
 </p>
 <p>
 <a
