--- a/classes/TaliaCore/ActiveSourceParts/Rdf/RdfReader.html
+++ b/classes/TaliaCore/ActiveSourceParts/Rdf/RdfReader.html
@@ -96,13 +96,13 @@ for more information on Talia import classes in general.
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000097">find_source_type</a>&nbsp;&nbsp;
       <a href="#M000099">format</a>&nbsp;&nbsp;
       <a href="#M000095">new</a>&nbsp;&nbsp;
       <a href="#M000098">rdf_to_talia_type</a>&nbsp;&nbsp;
       <a href="#M000096">sources</a>&nbsp;&nbsp;
       <a href="#M000094">sources_from</a>&nbsp;&nbsp;
       <a href="#M000093">sources_from_url</a>&nbsp;&nbsp;
+      <a href="#M000097">update_source_type</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -227,41 +227,6 @@ See TaliaCore::ActiveSourceParts::Xml::GenericReader#sources_from_url
 
       <h3 class="section-bar">Public Instance methods</h3>
 
-      <div id="method-M000097" class="method-detail">
-        <a name="M000097"></a>
-
-        <div class="method-heading">
-          <a href="#M000097" class="method-signature">
-          <span class="method-name">find_source_type</span><span class="method-args">(statement)</span>
-          </a>
-        </div>
-      
-        <div class="method-description">
-          <p>
-Used to determine the source talia type. The type can be contained
-explicitly as object of a N::TALIA.type predicate or can be inferred from
-the rdf type if a N::RDF.type predicate is present.
-</p>
-          <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000097-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000097-source">
-<pre>
-    <span class="ruby-comment cmt"># File lib/talia_core/active_source_parts/rdf/rdf_reader.rb, line 67</span>
-67:         <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">find_source_type</span>(<span class="ruby-identifier">statement</span>)
-68:           <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">if</span>(<span class="ruby-identifier">statement</span>.<span class="ruby-identifier">object</span>.<span class="ruby-identifier">literal?</span>)
-69:           <span class="ruby-keyword kw">if</span>(<span class="ruby-identifier">statement</span>.<span class="ruby-identifier">predicate</span>.<span class="ruby-identifier">to_s</span> <span class="ruby-operator">==</span> <span class="ruby-constant">N</span><span class="ruby-operator">::</span><span class="ruby-constant">TALIA</span>.<span class="ruby-identifier">type</span>.<span class="ruby-identifier">to_s</span>)
-70:             <span class="ruby-identifier">statement</span>.<span class="ruby-identifier">object</span>.<span class="ruby-identifier">to_s</span>
-71:           <span class="ruby-keyword kw">elsif</span>(<span class="ruby-identifier">statement</span>.<span class="ruby-identifier">predicate</span>.<span class="ruby-identifier">to_s</span> <span class="ruby-operator">==</span> <span class="ruby-constant">N</span><span class="ruby-operator">::</span><span class="ruby-constant">RDF</span>.<span class="ruby-identifier">type</span>.<span class="ruby-identifier">to_s</span>)
-72:             <span class="ruby-identifier">rdf_to_talia_type</span> <span class="ruby-identifier">statement</span>.<span class="ruby-identifier">object</span>.<span class="ruby-identifier">to_s</span>            
-73:           <span class="ruby-keyword kw">else</span>
-74:             <span class="ruby-keyword kw">nil</span>
-75:           <span class="ruby-keyword kw">end</span>
-76:         <span class="ruby-keyword kw">end</span>
-</pre>
-          </div>
-        </div>
-      </div>
-
       <div id="method-M000099" class="method-detail">
         <a name="M000099"></a>
 
@@ -276,10 +241,10 @@ the rdf type if a N::RDF.type predicate is present.
             onclick="toggleCode('M000099-source');return false;">[Source]</a></p>
           <div class="method-source-code" id="M000099-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/talia_core/active_source_parts/rdf/rdf_reader.rb, line 85</span>
-85:         <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">format</span>
-86:           <span class="ruby-identifier">raise</span> <span class="ruby-constant">NotImplementedError</span>
-87:         <span class="ruby-keyword kw">end</span>
+    <span class="ruby-comment cmt"># File lib/talia_core/active_source_parts/rdf/rdf_reader.rb, line 92</span>
+92:         <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">format</span>
+93:           <span class="ruby-identifier">raise</span> <span class="ruby-constant">NotImplementedError</span>
+94:         <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
@@ -302,12 +267,12 @@ Tries to gues at the talia type of a source given its rdf type.
             onclick="toggleCode('M000098-source');return false;">[Source]</a></p>
           <div class="method-source-code" id="M000098-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/talia_core/active_source_parts/rdf/rdf_reader.rb, line 79</span>
-79:         <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">rdf_to_talia_type</span>(<span class="ruby-identifier">rdf_type</span>)
-80:           <span class="ruby-constant">Class</span>.<span class="ruby-identifier">subclasses_of</span>(<span class="ruby-constant">TaliaCore</span><span class="ruby-operator">::</span><span class="ruby-constant">ActiveSource</span>).<span class="ruby-identifier">detect</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">c</span><span class="ruby-operator">|</span>
-81:             <span class="ruby-identifier">c</span>.<span class="ruby-identifier">additional_rdf_types</span>.<span class="ruby-identifier">include?</span> <span class="ruby-identifier">rdf_type</span>
-82:           <span class="ruby-keyword kw">end</span>.<span class="ruby-identifier">try</span> <span class="ruby-identifier">:name</span>
-83:         <span class="ruby-keyword kw">end</span>
+    <span class="ruby-comment cmt"># File lib/talia_core/active_source_parts/rdf/rdf_reader.rb, line 86</span>
+86:         <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">rdf_to_talia_type</span>(<span class="ruby-identifier">rdf_type</span>)
+87:           <span class="ruby-constant">Class</span>.<span class="ruby-identifier">subclasses_of</span>(<span class="ruby-constant">TaliaCore</span><span class="ruby-operator">::</span><span class="ruby-constant">ActiveSource</span>).<span class="ruby-identifier">detect</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">c</span><span class="ruby-operator">|</span>
+88:             <span class="ruby-identifier">c</span>.<span class="ruby-identifier">additional_rdf_types</span>.<span class="ruby-identifier">include?</span> <span class="ruby-identifier">rdf_type</span>
+89:           <span class="ruby-keyword kw">end</span>.<span class="ruby-identifier">try</span> <span class="ruby-identifier">:name</span>
+90:         <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
@@ -338,7 +303,7 @@ See TaliaCore::ActiveSourceParts::Xml::GenericReader#sources
 46:             <span class="ruby-ivar">@reader</span>.<span class="ruby-identifier">each_statement</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">statement</span><span class="ruby-operator">|</span>
 47:               <span class="ruby-identifier">source</span> = (<span class="ruby-ivar">@sources</span>[<span class="ruby-identifier">statement</span>.<span class="ruby-identifier">subject</span>.<span class="ruby-identifier">to_s</span>] <span class="ruby-operator">||=</span> {})
 48:               <span class="ruby-identifier">source</span>[<span class="ruby-value str">'uri'</span>] <span class="ruby-operator">||=</span> <span class="ruby-identifier">statement</span>.<span class="ruby-identifier">subject</span>.<span class="ruby-identifier">to_s</span>
-49:               <span class="ruby-identifier">source</span>[<span class="ruby-value str">'type'</span>] <span class="ruby-operator">||=</span> <span class="ruby-identifier">find_source_type</span> <span class="ruby-identifier">statement</span>
+49:               <span class="ruby-identifier">update_source_type</span>(<span class="ruby-identifier">source</span>, <span class="ruby-identifier">statement</span>)
 50:               <span class="ruby-identifier">source</span>[<span class="ruby-identifier">statement</span>.<span class="ruby-identifier">predicate</span>.<span class="ruby-identifier">to_s</span>] <span class="ruby-operator">||=</span> []
 51:               <span class="ruby-identifier">object</span> = <span class="ruby-keyword kw">if</span>(<span class="ruby-identifier">statement</span>.<span class="ruby-identifier">object</span>.<span class="ruby-identifier">literal?</span>)
 52:                          <span class="ruby-identifier">parsed_string</span> = <span class="ruby-constant">PropertyString</span>.<span class="ruby-identifier">parse</span>(<span class="ruby-identifier">statement</span>.<span class="ruby-identifier">object</span>.<span class="ruby-identifier">value</span>)
@@ -351,8 +316,52 @@ See TaliaCore::ActiveSourceParts::Xml::GenericReader#sources
 59:               <span class="ruby-identifier">progress</span>.<span class="ruby-identifier">inc</span>
 60:             <span class="ruby-keyword kw">end</span>
 61:           <span class="ruby-keyword kw">end</span>
-62:           <span class="ruby-ivar">@sources</span>.<span class="ruby-identifier">values</span>
-63:         <span class="ruby-keyword kw">end</span>
+62:           <span class="ruby-comment cmt"># Set all empty source types to ActiveSource, to prevent DummySource type objects to</span>
+63:           <span class="ruby-comment cmt"># be created. (Reason: When we import RDF, we assume that all sources are &quot;valid&quot;, and should</span>
+64:           <span class="ruby-comment cmt"># never be marked as DummySource)</span>
+65:           <span class="ruby-ivar">@sources</span> = <span class="ruby-ivar">@sources</span>.<span class="ruby-identifier">values</span>
+66:           <span class="ruby-ivar">@sources</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">s</span><span class="ruby-operator">|</span> <span class="ruby-identifier">s</span>[<span class="ruby-value str">'type'</span>] <span class="ruby-operator">||=</span> <span class="ruby-value str">'TaliaCore::ActiveSource'</span> }
+67:           <span class="ruby-ivar">@sources</span>
+68:         <span class="ruby-keyword kw">end</span>
+</pre>
+          </div>
+        </div>
+      </div>
+
+      <div id="method-M000097" class="method-detail">
+        <a name="M000097"></a>
+
+        <div class="method-heading">
+          <a href="#M000097" class="method-signature">
+          <span class="method-name">update_source_type</span><span class="method-args">(source, statement)</span>
+          </a>
+        </div>
+      
+        <div class="method-description">
+          <p>
+Update the Talia source type. The type can be contained explicitly as
+object of a N::TALIA.type predicate or can be inferred from the rdf type if
+a N::RDF.type predicate is present.
+</p>
+<p>
+The method works in the way that a N::TALIA type attribute always
+overwrites the type, while an N::RDF.type will only be used if no type has
+been set on the source
+</p>
+          <p><a class="source-toggle" href="#"
+            onclick="toggleCode('M000097-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000097-source">
+<pre>
+    <span class="ruby-comment cmt"># File lib/talia_core/active_source_parts/rdf/rdf_reader.rb, line 75</span>
+75:         <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">update_source_type</span>(<span class="ruby-identifier">source</span>, <span class="ruby-identifier">statement</span>)
+76:           <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">if</span>(<span class="ruby-identifier">statement</span>.<span class="ruby-identifier">object</span>.<span class="ruby-identifier">literal?</span>)
+77:           <span class="ruby-keyword kw">case</span>(<span class="ruby-identifier">statement</span>.<span class="ruby-identifier">predicate</span>.<span class="ruby-identifier">to_s</span>)
+78:           <span class="ruby-keyword kw">when</span> <span class="ruby-constant">N</span><span class="ruby-operator">::</span><span class="ruby-constant">TALIA</span>.<span class="ruby-identifier">type</span>.<span class="ruby-identifier">to_s</span>
+79:             <span class="ruby-identifier">source</span>[<span class="ruby-value str">'type'</span>] = <span class="ruby-identifier">statement</span>.<span class="ruby-identifier">object</span>.<span class="ruby-identifier">to_s</span>
+80:           <span class="ruby-keyword kw">when</span> <span class="ruby-constant">N</span><span class="ruby-operator">::</span><span class="ruby-constant">RDF</span>.<span class="ruby-identifier">type</span>.<span class="ruby-identifier">to_s</span>
+81:             <span class="ruby-identifier">source</span>[<span class="ruby-value str">'type'</span>] <span class="ruby-operator">||=</span> <span class="ruby-identifier">rdf_to_talia_type</span> <span class="ruby-identifier">statement</span>.<span class="ruby-identifier">object</span>.<span class="ruby-identifier">to_s</span>
+82:           <span class="ruby-keyword kw">end</span>
+83:         <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
